...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reminderssRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:liveData="@{viewModel.remindersList}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
<!--                android:fadeVisible="@{viewModel.showLoading.booleanValue()}"-->

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addReminderFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fab_marginRight"
                android:layout_marginRight="@dimen/fab_marginRight"
                android:layout_marginBottom="@dimen/fab_marginBottom"
                android:src="@drawable/ic_add"
...
