...
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved but location did not added !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
...
    <string name="marker_poi_snippet">marker poi snippet</string>
    <string name="you_signedin">You are signed-in</string>
    <string name="Asking_to_enable_the_location">App cannot work without getting the location, please enable it</string>
    <string name="no_name">No name</string>
    <string name="asking_to_select_poi">Please select a point of interest or a location for the reminder</string>
    <string name="poi_or_location_needed">You need to select a POI or a location to save</string>
    <string name="error_no_data">Please enter the title, description and specify a POI</string>
    <string name="reminder_latitude">Reminder Latitude</string>
    <string name="reminder_longitude">Reminder Longitude</string>
    <string name="reminder_location_save">Reminder Location</string>
    <string name="error_no_coordinated">Please specify a latitude and a longitude</string>
</resources>

